--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,173 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="icon" href="/favicon.png" type="image/x-icon">
+	<link rel="stylesheet" href="/styles.css">
+	<title>Document</title>
 </head>
+
 <body>
-    <h1>
-        Hello World
-    </h1>
-    <img src="/assets/images/cat.jpeg" alt="" width="300">
+	<div class="container">
+		<div class="hero">
+			<header class="header">
+				<div class="logo">
+					<div class="square square1"></div>
+					<div class="square square2"></div>
+					<div class="square square3"></div>
+					<div class="square square4"></div>
+					<h1 class="company-name">Travelline</h1>
+				</div>
+				<div class="navigation__wrapper">
+					<nav class="navigation"></nav>
+					<button class="phone-number">
+						<svg class="phone" width="33" height="40" viewBox="0 0 33 40" fill="none"
+							xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M5.45972 0.873418L7.94561 0.188712C10.279 -0.452205 12.7672 0.584807 13.7676 2.61106L15.7522 6.64764C16.6162 8.40519 16.138 10.4732 14.5647 11.7591L10.1889 15.3378C10.4569 17.4795 11.2933 19.5874 12.6933 21.6614C14.0235 23.6682 15.8077 25.4246 17.94 26.8266L23.196 25.3139C25.1898 24.7426 27.3592 25.4014 28.579 26.948L31.4276 30.5507C32.8485 32.35 32.5943 34.8301 30.8316 36.3547L28.9417 37.9889C27.0611 39.6151 24.3742 40.2062 21.8907 39.5374C16.0248 37.961 10.6325 33.2815 5.71154 25.499C0.783648 17.7045 -0.956017 11.0883 0.494859 5.6584C1.10478 3.37339 2.99231 1.55215 5.45972 0.873418Z"
+								fill="white" />
+						</svg>
+						<span class="number">+1 (000) 000 000</span></button>
+				</div>
+			</header>
+			<div class="hero__main">
+				<div class="hero__picture"><img src="assets/images/holiday.png" alt="holiday"></div>
+				<div class="hero__info">
+					<div class="hero__slogan">
+						<span class="red">Life is a journey</span>
+						, not a destination
+					</div>
+					<div class="hero__text">Let’s start your journey with us, your dream will come true...
+					</div>
+					<div class="hero__buttons">
+						<button class="explore">Explore Destinations</button>
+						<button class="watch">
+							<svg class="play" width="24" height="28" viewBox="0 0 24 28" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path
+									d="M22.5751 12.8097C23.2212 13.1983 23.2212 14.135 22.5751 14.5236L1.51538 27.1891C0.848878 27.5899 5.91205e-07 27.1099 6.25202e-07 26.3321L1.73245e-06 1.00123C1.76645e-06 0.223477 0.848877 -0.256572 1.51538 0.14427L22.5751 12.8097Z"
+									fill="#23BDEE" />
+							</svg>
+						</button>
+						<span class="watch__text">Watch how it works</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="background"><img src="assets/images/background.png" alt="yellow background"></div>
+		<section class="section1">
+			<div class="row center-xs">
+				<div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+					<div class="section1__title">
+						<span class="red">Check Our Best</span> Promotional Tour
+					</div>
+					<div class="section1__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+						Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+						took a galley of type and scrambled it to make a type specimen book.
+					</div>
+				</div>
+			</div>
+			<div class="row center-xs middle-xs">
+				<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+					<button class="left">
+						<div>
+							<svg class="button-left" width="32" height="50" viewBox="0 0 32 50" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" clip-rule="evenodd"
+									d="M2.08058 20.5806C-0.360194 23.0214 -0.360194 26.9786 2.08058 29.4194L20.8306 48.1694C23.2714 50.6102 27.2286 50.6102 29.6694 48.1694C32.1102 45.7286 32.1102 41.7714 29.6694 39.3306L15.3388 25L29.6694 10.6694C32.1102 8.22864 32.1102 4.27136 29.6694 1.83058C27.2286 -0.610194 23.2714 -0.610194 20.8306 1.83058L2.08058 20.5806Z"
+									fill="currentColor" />
+							</svg>
+						</div>
+					</button>
+				</div>
+				<div class="slider__wrapper col-xs-9 col-sm-9 col-md-9 col-lg-9">
+					<div class="slider">
+						<div class="beijing"> <img class="destination" src="assets/images/beijing.jpg" alt="Beijing"><span
+								class="red">Beijing</span></div>
+						<div class="turkey"> <img class="destination" src="assets/images/turkey.jpg" alt="Turkey"><span
+								class="red">Turkey</span></div>
+						<div class="pakistan"> <img class="destination" src="assets/images/pakistan.jpg" alt="Pakistan"><span
+								class="red">Pakistan</span></div>
+						<div class="vietnam"> <img class="destination" src="assets/images/vietnam.jpg" alt="Vietnam"><span
+								class="red">Vietnam</span></div>
+						<div class="thailand"> <img class="destination" src="assets/images/thailand.jpg" alt="Thailand"><span
+								class="red">Thailand</span></div>
+					</div>
+				</div>
+				<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+					<button class="right">
+						<div>
+							<svg class="button-right" width="32" height="50" viewBox="0 0 32 50" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" clip-rule="evenodd"
+									d="M29.9194 20.5806C32.3602 23.0214 32.3602 26.9786 29.9194 29.4194L11.1694 48.1694C8.72864 50.6102 4.77136 50.6102 2.33058 48.1694C-0.110194 45.7286 -0.110194 41.7714 2.33058 39.3306L16.6612 25L2.33058 10.6694C-0.110192 8.22864 -0.110192 4.27136 2.33058 1.83058C4.77136 -0.610194 8.72864 -0.610194 11.1694 1.83058L29.9194 20.5806Z"
+									fill="currentColor" />
+							</svg>
+						</div>
+					</button>
+				</div>
+			</div>
+		</section>
+		<section class="section2">
+			<div class="row center-xs">
+				<div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+					<div class="section2__title">
+						<span class="red">Globally</span> Accepted
+					</div>
+					<div class="section2__text">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+						scrambled it to make a type specimen book.
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+
+			</div>
+			<div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+
+			</div>
+		</section>
+
+		<footer class="footer">
+			<form action="get" class="form">
+				<div class="row center-xs">
+					<div class="col-xs-12">
+						<div class="footer__title">Subscribe to get our Newsletter</div>
+					</div>
+				</div>
+				<div class="footer__subscribe">
+					<!-- <div class="row center-xs"> -->
+					<!-- <div class="col-xs-12 col-sm-9 col-md-9 col-lg-5"> -->
+					<div class="footer__input">
+						<input class="input" type="email" placeholder="Your Email">
+						<div class="input__text">
+							<ul class="list">
+							</ul>
+						</div>
+					</div>
+					<!-- </div> -->
+					<!-- <div class="col-xs-12 col-sm-9 col-md-9 col-lg-3"> -->
+					<div class="footer__button">
+						<button class="subscribe">Subscribe</button>
+					</div>
+					<!-- </div> -->
+					<!-- </div> -->
+				</div>
+				<nav class="footer__navigation">
+					<span>Careers&nbsp;|&nbsp;Privacy Policy&nbsp;|&nbsp;Terms & Conditions</span>
+				</nav>
+				<div class="rights">© 2021 Tourism Department. </div>
 
 
-    <script src="/scripts.js"></script>
+			</form>
+		</footer>
+	</div>
+	<script src="/scripts.js"></script>
 </body>
+
 </html>
