some styling done

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
 		</section>
 		<section class="section2">
 			<div class="row center-xs">
-				<div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-8">
 					<div class="section2__title">
 						<span class="red">Globally</span> Accepted
 					</div>
@@ -125,14 +125,111 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
-
+			<div class="row center-xs journey-kind">
+				<div class="col-xs-12 col-sm-9 col-md-6 col-lg-4">
+					<div class="section2__square square__left">
+						<div class="content__wrapper">
+							<div class="square__title">For&nbsp;Domestic</div>
+							<button class="square__button">Start trip today</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-9 col-md-6 col-lg-4">
+					<div class="section2__square square__right">
+						<div class="content__wrapper">
+							<div class="square__title">For&nbsp;International</div>
+							<button class="square__button">Start trip today</button>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
-
+			<div class="row center-xs">
+				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+					<div class="video-background">
+						<div class="row start-xs middle-xs">
+							<div class="col-xs-12 col-sm-9 col-md-6 col-lg-6">
+								<div class="latest-tour__title">
+									<span class="red">Watch,</span> our lattest tour
+								</div>
+								<div class="latest-tour__text">
+									Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+									been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+									a
+									galley of type and scrambled it to make a type specimen book.
+								</div>
+								<div class="link">
+									<a class="learn" href="#">Learn more</a>
+								</div>
+							</div>
+							<div class="col-xs-12 col-sm-9 col-md-6 col-lg-6">
+								<video class="video" src="assets/images/video.mp4" controls></video>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
+		<section class="section3">
+			<div class="row center-xs">
+				<div class="col-xs-12">
+					<div class="team__title">
+						<span class="red">Our</span> Team
+					</div>
+					<div class="team__text">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+					</div>
+				</div>
+			</div>
+			<div class="team__content-wrapper">
+				<div class="team__pictures">
+					<div class="window">
+						<div class="window__panel">
+							<div class="circle circle-red"></div>
+							<div class="circle circle-yellow"></div>
+							<div class="circle circle-brown"></div>
+						</div>
+					
+					<img class="pic1" src="assets/images/portrait1.png" alt="team-member">
+					<img class="pic2" src="assets/images/portrait2.png" alt="team-member">
+					<img class="pic3" src="assets/images/portrait3.png" alt="team-member">
+					<img class="pic4" src="assets/images/portrait4.png" alt="team-member">
+					<img class="pic5" src="assets/images/portrait5.png" alt="team-member">
+				</div>
+				</div>
+				<div class="team__content-column">
+					<div class="team__subtitle">
+						Our <span class="red">team is the secret</span> to our success
+					</div>
+					<div class="team__row-wrapper">
+						<div class="team__content-row">
+							<div class="icon__picture">
+								<div class="icon">
+									<img class="icon__image" src="assets/images/icon1.png" alt="icon">
+								</div>
+							</div>
+							<div class="team__row-text">
+								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+								the
+								industry's standard dummy text ever since the 1500s,
+							</div>
+						</div>
+						<div class="team__content-row">
+							<div class="icon__picture">
+								<div class="icon">
+									<img class="icon__image" src="assets/images/icon2.png" alt="icon">
+								</div>
+							</div>
+							<div class="team__row-text">
+								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+								the
+								industry's standard dummy text ever since the 1500s,
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
+		</section>
 		<footer class="footer">
 			<form action="get" class="form">
 				<div class="row center-xs">
@@ -141,8 +238,6 @@
 					</div>
 				</div>
 				<div class="footer__subscribe">
-					<!-- <div class="row center-xs"> -->
-					<!-- <div class="col-xs-12 col-sm-9 col-md-9 col-lg-5"> -->
 					<div class="footer__input">
 						<input class="input" type="email" placeholder="Your Email">
 						<div class="input__text">
@@ -150,20 +245,14 @@
 							</ul>
 						</div>
 					</div>
-					<!-- </div> -->
-					<!-- <div class="col-xs-12 col-sm-9 col-md-9 col-lg-3"> -->
 					<div class="footer__button">
 						<button class="subscribe">Subscribe</button>
 					</div>
-					<!-- </div> -->
-					<!-- </div> -->
 				</div>
 				<nav class="footer__navigation">
 					<span>Careers&nbsp;|&nbsp;Privacy Policy&nbsp;|&nbsp;Terms & Conditions</span>
 				</nav>
 				<div class="rights">© 2021 Tourism Department. </div>
-
-
 			</form>
 		</footer>
 	</div>
