done except slider mobile view

--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,10 @@
 					</div>
 					<div class="col-xs-12 col-sm-9 col-md-5 col-lg-5">
 						<div class="hero__info">
-							<div class="hero__slogan">
+							<h2 class="hero__slogan">
 								<span class="red">Life is a journey</span>
 								, not a destination
-							</div>
+							</h2>
 							<div class="hero__text">Let’s start your journey with us, your dream will come true...
 							</div>
 							<div class="hero__buttons">
@@ -76,18 +76,18 @@
 		</div>
 		<div class="background"><img src="assets/images/background.png" alt="yellow background"></div>
 		<section class="section1">
-			<div class="row center-xs">
+			<div class="row container-fluid center-xs">
 				<div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
-					<div class="section1__title">
+					<h2 class="section1__title">
 						<span class="red">Check Our Best</span> Promotional Tour
-					</div>
+					</h2>
 					<div class="section1__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
 						took a galley of type and scrambled it to make a type specimen book.
 					</div>
 				</div>
 			</div>
-			<div class="row center-xs middle-xs">
+			<div class="row container-fluid center-xs middle-xs">
 				<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 					<button class="left">
 						<div>
@@ -129,11 +129,11 @@
 			</div>
 		</section>
 		<section class="section2">
-			<div class="row center-xs">
+			<div class="container-fluid row center-xs">
 				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-8">
-					<div class="section2__title">
+					<h2 class="section2__title">
 						<span class="red">Globally</span> Accepted
-					</div>
+					</h2>
 					<div class="section2__text">
 						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
 						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row center-xs journey-kind">
+			<div class="row container-fluid center-xs journey-kind">
 				<div class="col-xs-12 col-sm-9 col-md-6 col-lg-4">
 					<div class="section2__square square__left">
 						<div class="content__wrapper">
@@ -174,7 +174,7 @@
 									galley of type and scrambled it to make a type specimen book.
 								</div>
 								<div class="link">
-									<a class="learn" href="#">Learn more</a>
+									<a class="link__learn" class="learn" href="#">Learn more</a>
 								</div>
 							</div>
 							<div class="col-xs-12 col-sm-9 col-md-6 col-lg-6">
@@ -188,9 +188,9 @@
 		<section class="section3">
 			<div class="row center-xs">
 				<div class="col-xs-12">
-					<div class="team__title">
+					<h2 class="team__title">
 						<span class="red">Our</span> Team
-					</div>
+					</h2>
 					<div class="team__text">
 						Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 					</div>
@@ -213,9 +213,9 @@
 					</div>
 				</div>
 				<div class="team__content-column">
-					<div class="team__subtitle">
+					<h3 class="team__subtitle">
 						Our <span class="red">team is the secret</span> to our success
-					</div>
+					</h3>
 					<div class="team__row-wrapper">
 						<div class="team__content-row">
 							<div class="icon__picture">
@@ -249,9 +249,9 @@
 			<div class="promise">
 				<div class="row container-fluid center-xs">
 					<div class="col-xs-12 col-sm-9 col-md-6 col-lg-6">
-						<div class="promise__title">
+						<h2 class="promise__title">
 							<span class="red">Why</span> Choose Us
-						</div>
+						</h2>
 						<div class="promise__text">
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
 							industry's standard dummy text ever since the 1500s.
@@ -333,7 +333,7 @@
 										</hr>
 										<div class="testimonial__word">TESTIMONIAL</div>
 									</div>
-									<div class="red testimonial__title">What Customers Say?</div>
+									<h2 class="red testimonial__title">What Customers Say?</h2>
 									<div class="testimonial__text">
 										<p class="testimonial__paragraph1">
 											Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -363,15 +363,17 @@
 							</div>
 						</div>
 					</div>
-					<div class="booking">
-						<div class="case__column">
-							<img class="case" src="assets/images/case.png" alt="suitcase">
-						</div>
-						<div class="book__column">
-							<div class="book">
-								<div class="book__trips">Upcoming Trips</div>
-								<div class="book__date">Today at 12.00 PM</div>
-								<button class="book__button">Join Now</button>
+					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+						<div class="booking">
+							<div class="case__column">
+								<img class="case" src="assets/images/case.png" alt="suitcase">
+							</div>
+							<div class="book__column">
+								<div class="book">
+									<div class="book__trips">Upcoming Trips</div>
+									<div class="book__date">Today at 12.00 PM</div>
+									<button class="book__button">Join Now</button>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -381,8 +383,8 @@
 		<section class="section5">
 			<div class="row center-xs around-xs">
 				<div class="col-xs-12 col-sm-9 col-md-6 col-lg-6">
-					<div class="latest__title red">Lastest News and Resources
-					</div>
+					<h2 class="latest__title red">Lastest News and Resources
+					</h2>
 					<div class="latest__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 					</div>
 				</div>
@@ -393,15 +395,17 @@
 						<div class="main__news-picture">
 							<img src="assets/images/news_main.jpg" alt="places of interest">
 						</div>
-						<div class="news-button news-button1">NEWS</div>
-						<div class="main__news-title red">
+						<button class="news-button news-button1">NEWS</button>
+						<h3 class="main__news-title red">
 							Where does it come from?
-						</div>
+						</h3>
 						<div class="main__news-text">
 							Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
 							classical Latin literature from 45 BC, making it over 2000 years old.
 						</div>
-						<div class="main__news-link red">Read more</div>
+						<div class="main__news-link red">
+							<a class="link__read" href="#">Read more</a>
+						</div>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-6 col-lg-5">
@@ -409,12 +413,12 @@
 						<div class="news__pictures">
 							<div class="picture">
 								<img src="assets/images/news_pic1.jpg" alt="making photo on mobile">
-								<div class="news-button news__button-inside">PRESS RELEASE</div>
+								<button class="news-button news__button-inside">PRESS RELEASE</button>
 							</div>
 						</div>
 						<div class="news__article">
-							<div class="news__title red">Where does it come from?
-							</div>
+							<h4 class="news__title red">Where does it come from?
+							</h4>
 							<div class="news__text">Contrary to popular belief, Lorem Ipsum is not simply random text. It
 								has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
 							</div>
@@ -423,13 +427,13 @@
 					<div class="news__wrapper2">
 						<div class="news__pictures">
 							<div class="picture">
-								<img src="assets/images/news_pic2.jpg" alt="making photo on mobile">
-								<div class="news-button news__button-inside">NEWS</div>
+								<img src="assets/images/news_pic2.jpg" alt="making photo on camera">
+								<button class="news-button news__button-inside">NEWS</button>
 							</div>
 						</div>
 						<div class="news__article">
-							<div class="news__title red">Where does it come from?
-							</div>
+							<h4 class="news__title red">Where does it come from?
+							</h4>
 							<div class="news__text">Contrary to popular belief, Lorem Ipsum is not simply random text. It
 								has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
 							</div>
@@ -438,13 +442,13 @@
 					<div class="news__wrapper3">
 						<div class="news__pictures">
 							<div class="picture">
-								<img src="assets/images/news_pic3.jpg" alt="making photo on mobile">
-								<div class="news-button news__button-inside">NEWS</div>
+								<img src="assets/images/news_pic3.jpg" alt="trees">
+								<button class="news-button news__button-inside">NEWS</button>
 							</div>
 						</div>
 						<div class="news__article">
-							<div class="news__title red">Where does it come from?
-							</div>
+							<h4 class="news__title red">Where does it come from?
+							</h4>
 							<div class="news__text">Contrary to popular belief, Lorem Ipsum is not simply random text. It
 								has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
 							</div>
@@ -452,7 +456,6 @@
 					</div>
 				</div>
 			</div>
-
 		</section>
 		<footer class="footer">
 			<form action="get" class="form">
