--- a/src/index.html
+++ b/src/index.html
@@ -87,8 +87,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="row container-fluid center-xs middle-xs">
-				<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+			<div class="row container-fluid center-xs middle-xs around-xs">
+				<div class=" button-left__container col-xs-1 col-sm-1 col-md-1 col-lg-1">
 					<button class="left">
 						<div>
 							<svg class="button-left" width="32" height="50" viewBox="0 0 32 50" fill="none"
@@ -100,7 +100,7 @@
 						</div>
 					</button>
 				</div>
-				<div class="slider__wrapper col-xs-9 col-sm-9 col-md-9 col-lg-9">
+				<div class="slider__wrapper col-xs-8 col-sm-9 col-md-9 col-lg-9">
 					<div class="slider">
 						<div class="beijing"> <img class="destination" src="assets/images/beijing.jpg" alt="Beijing"><span
 								class="red">Beijing</span></div>
@@ -114,7 +114,7 @@
 								class="red">Thailand</span></div>
 					</div>
 				</div>
-				<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+				<div class=" button-right__container col-xs-1 col-sm-1 col-md-1 col-lg-1">
 					<button class="right">
 						<div>
 							<svg class="button-right" width="32" height="50" viewBox="0 0 32 50" fill="none"
