--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://scerbakova.github.io/9_th_homework/index.html">
+<meta http-equiv="refresh" content="0; url=https://scerbakova.github.io/src/index.html">
