--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://9_th_homework.github.io/src/index.html">
+<meta http-equiv="refresh" content="0; url=https://Scerbakova/9_th_homework.github.io/src/index.html">
