--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting</title>
-<meta http-equiv="refresh" content="0; URL=https://scerbakova.github.io/9_th_homework/src/index.html">
+<meta http-equiv="refresh" content="0; URL=https://scerbakova.github.io/src/index.html">
 <link rel="canonical" href="https://scerbakova.github.io/9_th_homework/">
